# bossbot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
.github/workflows/: test.yml
bossbot/controller/: discord_controller.py
bossbot/domain/: bossbot.py  cheer_words.py  commute_clock.py  member.py
bossbot/service/: commute_service.py
