[tool.poetry]
name = "bossbot"
version = "0.1.0"
description = "BossBot is watching YOU..."
authors = ["goddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
ruff = "^0.1.15"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"
mypy = "^1.8.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
